tests/build/cases/widget_new/malformed_fields1.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
 --> cases/widget_new/malformed_fields1.rs:7:22
  |
7 |             margin: 0;
  |                      ^ expected one of `)`, `,`, `.`, `?`, or an operator
